# cargo-xwin

./: AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  pyproject.toml
.github/workflows/: CI.yml  Release.yml
src/: bench.rs  build.rs  cache.rs  common.rs  env.rs  init_xwin.rs  lib.rs  macros.rs  options.rs  run.rs  rustc.rs  test.rs
src/backend/: clang_cl.rs  mod.rs
src/compiler/: clang.rs  clang_cl.rs  common.rs  mod.rs  override.cmake
tests/bindeps-cross-target/: Cargo.toml
tests/bindeps-cross-target/linux_bin/: Cargo.toml
tests/bindeps-cross-target/linux_bin/src/: main.rs
tests/bindeps-cross-target/src/: main.rs
tests/hello-bzip2/: Cargo.toml
tests/hello-bzip2/src/: main.rs
tests/hello-rustls/: Cargo.toml
tests/hello-rustls/src/: main.rs
tests/hello-windows/: Cargo.toml
tests/hello-windows/src/: main.rs
