[package]
name = "cargo-xwin"
version = "0.16.2"
edition = "2021"
description = "Cross compile Cargo project to Windows MSVC target with ease"
license = "MIT"
keywords = ["windows", "cargo", "msvc"]
readme = "README.md"
repository = "https://github.com/rust-cross/cargo-xwin"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }.{ target }.{ archive-format }"

[dependencies]
anyhow = "1.0.53"
cargo-config2 = "0.1.4"
cargo-options = "0.7.1"
clap = { version = "4.3.0", features = ["derive", "env", "wrap_help", "unstable-styles"] }
dirs = "5.0.0"
fs-err = "2.7.0"
indicatif = "0.17.2"
native-tls-crate = { package = "native-tls", version = "0.2.11", optional = true }
paste = "1.0.12"
path-slash = "0.2.0"
rustls = { version = "0.21.8", optional = true }
rustls-pemfile = { version = "2.0.0", optional = true }
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }
ureq = { version = "2.8.0", default-features = false, features = ["gzip", "socks-proxy"] }
which = "5.0.0"
xwin = { version = "0.5.0", default-features = false }

[features]
# By default we use rustls for TLS
default = ["rustls-tls"]
rustls-tls = ["ureq/tls", "rustls", "rustls-pemfile"]
# If this feature is enabled we instead use the native TLS implementation for the
# target platform
native-tls = ["ureq/native-tls", "rustls-pemfile", "native-tls-crate"]
