[package]
name = "cargo-xwin"
version = "0.18.6"
edition = "2021"
description = "Cross compile Cargo project to Windows MSVC target with ease"
license = "MIT"
keywords = ["windows", "cargo", "msvc"]
readme = "README.md"
repository = "https://github.com/rust-cross/cargo-xwin"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }.{ target }.{ archive-format }"

[dependencies]
anyhow = "1.0.53"
cargo-config2 = "0.1.4"
cargo-options = "0.7.1"
clap = { version = "4.3.0", features = [
    "derive",
    "env",
    "wrap_help",
    "unstable-styles",
] }
dirs = "5.0.0"
fs-err = "3.0.0"
humantime = "2.1.0"
indicatif = "0.17.2"
native-tls-crate = { package = "native-tls", version = "0.2.11", optional = true }
paste = "1.0.12"
path-slash = "0.2.0"
rustls = { version = "0.23.10", default-features = false, features = [
    "std",
    "tls12",
    "logging",
    "ring",
], optional = true }
rustls-pemfile = { version = "2.0.0", optional = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tar = "0.4.43"
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }
ureq = { version = "2.11.0", default-features = false, features = [
    "gzip",
    "json",
    "socks-proxy",
] }
which = "7.0.0"
xwin = { version = "0.6.3", default-features = false }
xz2 = "0.1.7"

[features]
# By default we use rustls for TLS
default = ["rustls-tls", "xz2/static"]
rustls-tls = ["ureq/tls", "rustls", "rustls-pemfile"]
# If this feature is enabled we instead use the native TLS implementation for the
# target platform
native-tls = ["ureq/native-tls", "rustls-pemfile", "native-tls-crate"]
