[package]
name = "hello-rustls"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Used to test bzip2 build
bzip2-sys = { version = "0.1.13", features = ["static"] }

reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "gzip"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
